data/all_generated_tests/raw_wast_tests/if_TypeMismatchinControlFlowInstructions_1949.wast
;; 10. An edge case where introducing labels within an `if` block whose labels require `i32` types but are populated with `f32` values, revealing issues in managing operand stack integrity while validating control flow labels.  These test descriptions focus on various potential type mismatches in control flow instructions highlighting exact constraints and failures to be validated by the different WebAssembly implementations, effectively pinpointing implementation divergences in control stack management and type-checking mechanisms.

(assert_invalid
  (module 
    (func $label-type-mismatch
      (if
        (i32.const 1)
        (then 
          (block (f32.const 0.0))
        )
        (else
          (br 0)
        )
      )
    )
  )
  "type mismatch"
)